--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,70 +1,71 @@
-name: Ultimate OBS Streaming RDP
+name: Ultra OBS RDP (Fixed)
 on:
   workflow_dispatch:
 
 jobs:
-  obs-stream-studio:
+  stream-ready-rdp:
     runs-on: windows-latest
     timeout-minutes: 360
     
     steps:
-      - name: 🚀 Initialize System & Performance Tweaks
+      - name: 🚀 Optimize System & Install Essentials
         run: |
-          # Disable Windows Visual Effects for better CPU performance
-          Write-Host "Optimizing Visual Effects..."
-          Set-ItemProperty -Path "HKCU:\Software\Microsoft\Windows\CurrentVersion\Explorer\VisualEffects" -Name "VisualFXSetting" -Value 2 -Force
-          
-          # Set High Performance Power Plan
-          powercfg -setactive 8c5e7fda-e8bf-4a96-9a85-a6e23a8c635c
-          
-          # Disable Sleep/Hibernate
+          # 1. Disable Sleep/Screensaver
           powercfg -change -standby-timeout-ac 0
           powercfg -change -monitor-timeout-ac 0
-
-      - name: 🛠️ Install Streaming Suite (OBS, Chrome, VLC, Audio)
-        run: |
-          # Using Chocolatey to install professional tools automatically
-          Set-ExecutionPolicy Bypass -Scope Process -Force; [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072; iex ((New-Object System.Net.WebClient).DownloadString('https://community.chocolatey.org/install.ps1'))
           
-          Write-Host "Installing OBS Studio, Chrome, VLC, and VB-Cable..."
+          # 2. Install OBS Studio & Chrome (Silently)
+          Set-ExecutionPolicy Bypass -Scope Process -Force; [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072; iex ((New-Object System.Net.WebClient).DownloadString('https://community.chocolatey.org/install.ps1'))
           choco install obs-studio -y --no-progress
           choco install googlechrome -y --no-progress
-          choco install vlc -y --no-progress
           choco install vb-cable -y --no-progress
-          
-          # Create Desktop Shortcuts explicitly if needed (Optional, usually Choco does this)
-          Write-Host "Software Installation Complete."
 
-      - name: 🔐 Configure Secure RDP Settings
+      - name: 🛡️ Configure Firewall & RDP (Error Proof)
         run: |
+          # Enable RDP in Registry
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' -Name "fDenyTSConnections" -Value 0 -Force
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -Name "UserAuthentication" -Value 0 -Force
-          Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -Name "SecurityLayer" -Value 0 -Force
           
-          # Allow RDP and OBS RTMP/SRT ports through Firewall
-          netsh advfirewall firewall delete rule name="RDP-Tailscale"
+          # -----------------------------------------------------------
+          # FIX: We use 'try/catch' so the script doesn't crash if the rule doesn't exist yet
+          # -----------------------------------------------------------
+          try {
+            netsh advfirewall firewall delete rule name="RDP-Tailscale" *>$null
+          } catch {
+            Write-Host "Rule didn't exist yet, proceeding..."
+          }
+
+          # Add new Allow Rules
           netsh advfirewall firewall add rule name="RDP-Tailscale" dir=in action=allow protocol=TCP localport=3389
-          netsh advfirewall firewall add rule name="OBS-RTMP" dir=in action=allow protocol=TCP localport=1935
+          netsh advfirewall firewall add rule name="OBS-Stream" dir=in action=allow protocol=TCP localport=1935
           
           Restart-Service -Name TermService -Force
+          Write-Host "RDP Services Configured Successfully."
 
-      - name: 👤 Create Admin User
+      - name: 👤 Create User & Grant Permissions (Fixed)
         run: |
+          $username = "TOOLBOXLAP"
           $password = "admin@123"
           $securePass = ConvertTo-SecureString $password -AsPlainText -Force
 
-          # Check if user exists to avoid errors on re-runs (though rare on fresh runners)
-          if (-not (Get-LocalUser -Name "TOOLBOXLAP" -ErrorAction SilentlyContinue)) {
-              New-LocalUser -Name "TOOLBOXLAP" -Password $securePass -AccountNeverExpires -Description "Streaming Admin"
+          # 1. Create User
+          if (Get-LocalUser -Name $username -ErrorAction SilentlyContinue) {
+              Remove-LocalUser -Name $username
           }
-
-          Add-LocalGroupMember -Group "Administrators" -Member "TOOLBOXLAP"
-          Add-LocalGroupMember -Group "Remote Desktop Users" -Member "TOOLBOXLAP"
+          New-LocalUser -Name $username -Password $securePass -AccountNeverExpires -Description "Stream Admin"
           
-          # Hide the default Administrator account to avoid confusion
-          net user Administrator /active:no
+          # -----------------------------------------------------------
+          # FIX: Wait 2 seconds for Windows to register the user before adding to groups
+          # -----------------------------------------------------------
+          Start-Sleep -Seconds 2
+          
+          # 2. Add to Admin Groups
+          Add-LocalGroupMember -Group "Administrators" -Member $username
+          Add-LocalGroupMember -Group "Remote Desktop Users" -Member $username
+          
+          Write-Host "User $username created and added to Admin groups."
 
-      - name: 🌐 Install & Connect Tailscale (VPN)
+      - name: 🌐 Install & Connect Tailscale
         run: |
           $tsUrl = "https://pkgs.tailscale.com/stable/tailscale-setup-latest.msi"
           $installerPath = "$env:TEMP\tailscale.msi"
@@ -73,9 +74,10 @@ jobs:
           Start-Process msiexec.exe -ArgumentList "/i", "`"$installerPath`"", "/quiet", "/norestart" -Wait
           Remove-Item $installerPath -Force
           
-          # Connect to Tailscale using Secret
-          & "$env:ProgramFiles\Tailscale\tailscale.exe" up --authkey=${{ secrets.TAILSCALE_AUTH_KEY }} --hostname="OBS-Studio-$env:GITHUB_RUN_ID" --accept-routes
+          # Connect
+          & "$env:ProgramFiles\Tailscale\tailscale.exe" up --authkey=${{ secrets.TAILSCALE_AUTH_KEY }} --hostname="OBS-Stream-$env:GITHUB_RUN_ID" --accept-routes
           
+          # Get IP with Retry Logic
           $tsIP = $null
           $retries = 0
           while (-not $tsIP -and $retries -lt 20) {
@@ -83,45 +85,26 @@ jobs:
               Start-Sleep -Seconds 3
               $retries++
           }
-          if (-not $tsIP) { Write-Error "Tailscale IP allocation failed."; exit 1 }
+          
+          if (-not $tsIP) { 
+            Write-Error "Failed to get Tailscale IP" 
+            exit 1 
+          }
           
           echo "TAILSCALE_IP=$tsIP" >> $env:GITHUB_ENV
 
-      - name: 📡 Connection Health Check
-        run: |
-          $testResult = Test-NetConnection -ComputerName $env:TAILSCALE_IP -Port 3389
-          if (-not $testResult.TcpTestSucceeded) {
-              Write-Warning "Local Loopback RDP check failed (This might be normal due to firewall), proceeding anyway..."
-          } else {
-              Write-Host "RDP Port 3389 is OPEN and LISTENING."
-          }
-
-      - name: 🟢 LIVE STREAM READY - Credentials
+      - name: 🟢 SUCCESS - Stream Ready
         run: |
           Write-Host " "
-          Write-Host "#######################################################" -ForegroundColor Green
-          Write-Host "   🎬 ULTRA PROFESSIONAL OBS STREAMING SETUP READY    " -ForegroundColor Green
-          Write-Host "#######################################################" -ForegroundColor Green
-          Write-Host " "
-          Write-Host "   1. Copy this IP:       $env:TAILSCALE_IP" -ForegroundColor Cyan
-          Write-Host "   2. Username:           TOOLBOXLAP" -ForegroundColor Yellow
-          Write-Host "   3. Password:           admin@123" -ForegroundColor Yellow
-          Write-Host " "
-          Write-Host "   ✅ OBS Studio Installed"
-          Write-Host "   ✅ Chrome Installed"
-          Write-Host "   ✅ VB-Audio Cable Installed"
-          Write-Host " "
-          Write-Host "   ⚠️  NOTE: Since this is a VM without a GPU:"
-          Write-Host "       Set OBS Encoder to: x264"
-          Write-Host "       Set CPU Preset to: ultrafast"
-          Write-Host "#######################################################"
+          Write-Host "=============================================" -ForegroundColor Green
+          Write-Host "   STREAMING RDP IS READY TO CONNECT" -ForegroundColor Green
+          Write-Host "=============================================" -ForegroundColor Green
+          Write-Host "   IP Address:  $env:TAILSCALE_IP" -ForegroundColor Cyan
+          Write-Host "   Username:    TOOLBOXLAP" -ForegroundColor Yellow
+          Write-Host "   Password:    admin@123" -ForegroundColor Yellow
+          Write-Host "============================================="
           
-          # Keep-Alive Loop to prevent workflow from closing
+          # Loop forever to keep instance alive
           while ($true) {
-              $date = Get-Date -Format "HH:mm:ss"
-              Write-Host "[$date] Session Active. OBS Studio VM is running..."
-              # Simulating activity to keep runner 'warm'
-              $wsh = New-Object -ComObject WScript.Shell
-              $wsh.SendKeys('+{F15}')
-              Start-Sleep -Seconds 60
+            Start-Sleep -Seconds 60
           }
