--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,84 +10,97 @@ jobs:
     steps:
       - name: 🚀 Optimize System & Install Essentials
         run: |
-          # 1. Disable Sleep/Screensaver
+          Write-Host "Disabling Sleep Modes..."
           powercfg -change -standby-timeout-ac 0
           powercfg -change -monitor-timeout-ac 0
           
-          # 2. Install OBS Studio & Chrome (Silently)
+          Write-Host "Installing Chocolatey Packages..."
           Set-ExecutionPolicy Bypass -Scope Process -Force; [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072; iex ((New-Object System.Net.WebClient).DownloadString('https://community.chocolatey.org/install.ps1'))
-          choco install obs-studio -y --no-progress
-          choco install googlechrome -y --no-progress
-          choco install vb-cable -y --no-progress
+          
+          # Install apps silently and ignore minor checksum errors
+          choco install obs-studio -y --no-progress --ignore-checksums
+          choco install googlechrome -y --no-progress --ignore-checksums
+          choco install vb-cable -y --no-progress --ignore-checksums
 
-      - name: 🛡️ Configure Firewall & RDP (Error Proof)
+      - name: 🛡️ Configure Firewall & RDP
         run: |
           # Enable RDP in Registry
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' -Name "fDenyTSConnections" -Value 0 -Force
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -Name "UserAuthentication" -Value 0 -Force
           
-          # -----------------------------------------------------------
-          # FIX: We use 'try/catch' so the script doesn't crash if the rule doesn't exist yet
-          # -----------------------------------------------------------
+          # Remove existing rule if exists (Error Proof)
           try {
             netsh advfirewall firewall delete rule name="RDP-Tailscale" *>$null
           } catch {
-            Write-Host "Rule didn't exist yet, proceeding..."
+            Write-Host "Rule clean."
           }
 
-          # Add new Allow Rules
+          # Add Allow Rules
           netsh advfirewall firewall add rule name="RDP-Tailscale" dir=in action=allow protocol=TCP localport=3389
           netsh advfirewall firewall add rule name="OBS-Stream" dir=in action=allow protocol=TCP localport=1935
           
+          # Restart TermService to apply settings
           Restart-Service -Name TermService -Force
-          Write-Host "RDP Services Configured Successfully."
+          Write-Host "RDP Services Configured."
 
-      - name: 👤 Create User & Grant Permissions (Fixed)
+      - name: 👤 Create Admin User (Fixed Logic)
         run: |
           $username = "TOOLBOXLAP"
           $password = "admin@123"
           $securePass = ConvertTo-SecureString $password -AsPlainText -Force
 
-          # 1. Create User
-          if (Get-LocalUser -Name $username -ErrorAction SilentlyContinue) {
-              Remove-LocalUser -Name $username
+          # 1. Check if user exists, Create if not, Set Password if yes
+          $userExists = Get-LocalUser -Name $username -ErrorAction SilentlyContinue
+          
+          if ($userExists) {
+              Write-Host "User $username already exists. Resetting password..."
+              Set-LocalUser -Name $username -Password $securePass
+          } else {
+              Write-Host "Creating new user $username..."
+              New-LocalUser -Name $username -Password $securePass -AccountNeverExpires -Description "Stream Admin"
           }
-          New-LocalUser -Name $username -Password $securePass -AccountNeverExpires -Description "Stream Admin"
           
-          # -----------------------------------------------------------
-          # FIX: Wait 2 seconds for Windows to register the user before adding to groups
-          # -----------------------------------------------------------
-          Start-Sleep -Seconds 2
+          # 2. Add to Groups (Using 'net localgroup' is more reliable in CI/CD than PowerShell cmdlets)
+          Write-Host "Adding user to Admin groups..."
+          cmd /c "net localgroup Administrators $username /add"
+          cmd /c "net localgroup 'Remote Desktop Users' $username /add"
           
-          # 2. Add to Admin Groups
-          Add-LocalGroupMember -Group "Administrators" -Member $username
-          Add-LocalGroupMember -Group "Remote Desktop Users" -Member $username
-          
-          Write-Host "User $username created and added to Admin groups."
+          # 3. Verify
+          $checkAdmin = net localgroup Administrators
+          if ($checkAdmin -match $username) {
+              Write-Host "SUCCESS: User $username is fully configured." -ForegroundColor Green
+          } else {
+              Write-Error "Failed to add user to Admin group."
+          }
 
       - name: 🌐 Install & Connect Tailscale
         run: |
           $tsUrl = "https://pkgs.tailscale.com/stable/tailscale-setup-latest.msi"
           $installerPath = "$env:TEMP\tailscale.msi"
 
+          Write-Host "Downloading Tailscale..."
           Invoke-WebRequest -Uri $tsUrl -OutFile $installerPath
+          
+          Write-Host "Installing Tailscale..."
           Start-Process msiexec.exe -ArgumentList "/i", "`"$installerPath`"", "/quiet", "/norestart" -Wait
           Remove-Item $installerPath -Force
           
-          # Connect
+          # Connect to Tailscale
+          Write-Host "Authenticating Tailscale..."
           & "$env:ProgramFiles\Tailscale\tailscale.exe" up --authkey=${{ secrets.TAILSCALE_AUTH_KEY }} --hostname="OBS-Stream-$env:GITHUB_RUN_ID" --accept-routes
           
-          # Get IP with Retry Logic
+          # Get IP with Loop
           $tsIP = $null
           $retries = 0
           while (-not $tsIP -and $retries -lt 20) {
               $tsIP = & "$env:ProgramFiles\Tailscale\tailscale.exe" ip -4
+              if ($tsIP) { break }
               Start-Sleep -Seconds 3
               $retries++
           }
           
           if (-not $tsIP) { 
-            Write-Error "Failed to get Tailscale IP" 
+            Write-Error "Failed to get Tailscale IP. Check your Auth Key." 
             exit 1 
           }
           
@@ -104,7 +117,7 @@ jobs:
           Write-Host "   Password:    admin@123" -ForegroundColor Yellow
           Write-Host "============================================="
           
-          # Loop forever to keep instance alive
+          # Keep Alive Loop
           while ($true) {
             Start-Sleep -Seconds 60
           }
