--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,117 +1,118 @@
-name: Ultra OBS RDP (Auto-Generated Credentials)
+name: Ultra OBS RDP (Auto-Credentials)
 on:
   workflow_dispatch:
 
 jobs:
-  stream-ready-rdp:
+  secure-rdp:
     runs-on: windows-latest
     timeout-minutes: 360
-    
     steps:
-      - name: 🚀 Optimize System & Install Essentials
+      # ---------------------------------------------------
+      # STEP 1: INSTALL OBS & CHROME (Added from your request)
+      # ---------------------------------------------------
+      - name: 🚀 Install OBS Studio & Chrome
         run: |
           Write-Host "Disabling Sleep Modes..."
           powercfg -change -standby-timeout-ac 0
           powercfg -change -monitor-timeout-ac 0
-          
-          Write-Host "Installing Chocolatey Packages (OBS, Chrome, VB-Cable)..."
+
+          Write-Host "Installing Chocolatey & Apps..."
           Set-ExecutionPolicy Bypass -Scope Process -Force; [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072; iex ((New-Object System.Net.WebClient).DownloadString('https://community.chocolatey.org/install.ps1'))
           
+          # Install silently
           choco install obs-studio -y --no-progress --ignore-checksums
           choco install googlechrome -y --no-progress --ignore-checksums
           choco install vb-cable -y --no-progress --ignore-checksums
+          Write-Host "Installation Complete."
 
-      - name: 🛡️ Configure Firewall & RDP (From Working Reference)
+      # ---------------------------------------------------
+      # STEP 2: RDP CONFIG (Copied EXACTLY from your working 100% script)
+      # ---------------------------------------------------
+      - name: Configure Core RDP Settings
         run: |
-          # These settings match your working "RDP" repo exactly
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' -Name "fDenyTSConnections" -Value 0 -Force
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -Name "UserAuthentication" -Value 0 -Force
-          # SecurityLayer 0 fixes many connection errors
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -Name "SecurityLayer" -Value 0 -Force
           
-          # Firewall Rules
-          netsh advfirewall firewall delete rule name="RDP-Tailscale" all
+          # Firewall logic from your working script
+          try { netsh advfirewall firewall delete rule name="RDP-Tailscale" } catch {}
           netsh advfirewall firewall add rule name="RDP-Tailscale" dir=in action=allow protocol=TCP localport=3389
-          netsh advfirewall firewall add rule name="OBS-Stream" dir=in action=allow protocol=TCP localport=1935
-          
           Restart-Service -Name TermService -Force
-          Write-Host "RDP and Firewall Configured Successfully."
 
-      - name: 👤 Auto-Generate User & Grant Permissions
+      # ---------------------------------------------------
+      # STEP 3: CREATE USER (Auto-Generated + Working Logic)
+      # ---------------------------------------------------
+      - name: Create Auto-Generated User
         run: |
-          # 1. GENERATE RANDOM CREDENTIALS
+          # Generate Random Password (12 chars, letters+numbers)
           $autoUser = "StreamUser"
-          # Generates a random 12-character password with letters and numbers + a symbol to satisfy complexity requirements
-          $randomPass = -join ((65..90) + (97..122) + (48..57) | Get-Random -Count 12 | % {[char]$_}) + "!"
-          
-          Write-Host "Generated Username: $autoUser"
-          # We save these to Environment Variables so we can print them at the end
+          $alphabet = "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789!@"
+          $autoPass = -join ($alphabet.ToCharArray() | Get-Random -Count 14)
+          $securePass = ConvertTo-SecureString $autoPass -AsPlainText -Force
+
+          # Save to Env for display later
           echo "GEN_USER=$autoUser" >> $env:GITHUB_ENV
-          echo "GEN_PASS=$randomPass" >> $env:GITHUB_ENV
+          echo "GEN_PASS=$autoPass" >> $env:GITHUB_ENV
 
-          $securePass = ConvertTo-SecureString $randomPass -AsPlainText -Force
-
-          # 2. CREATE USER (Using your working logic: Check if exists first)
+          # USE YOUR WORKING LOGIC (No 'Remove-LocalUser', only check -not exist)
           if (-not (Get-LocalUser -Name $autoUser -ErrorAction SilentlyContinue)) {
-              New-LocalUser -Name $autoUser -Password $securePass -AccountNeverExpires -Description "Auto Generated RDP User"
-              Write-Host "User created successfully."
+              New-LocalUser -Name $autoUser -Password $securePass -AccountNeverExpires
+              Write-Host "User $autoUser created."
           } else {
-              Write-Host "User already exists, updating password."
+              # If user exists, just update password
               Set-LocalUser -Name $autoUser -Password $securePass
           }
 
-          # 3. ADD TO GROUPS
           Add-LocalGroupMember -Group "Administrators" -Member $autoUser
           Add-LocalGroupMember -Group "Remote Desktop Users" -Member $autoUser
-          
-          # Verify
+
           if (-not (Get-LocalUser -Name $autoUser)) {
-              Write-Error "User creation failed!"
+              Write-Error "User creation failed"
               exit 1
           }
-          Write-Host "User setup complete."
 
-      - name: 🌐 Install & Connect Tailscale
+      # ---------------------------------------------------
+      # STEP 4: TAILSCALE (Copied EXACTLY from your working script)
+      # ---------------------------------------------------
+      - name: Install Tailscale
         run: |
           $tsUrl = "https://pkgs.tailscale.com/stable/tailscale-setup-latest.msi"
           $installerPath = "$env:TEMP\tailscale.msi"
-
           Invoke-WebRequest -Uri $tsUrl -OutFile $installerPath
           Start-Process msiexec.exe -ArgumentList "/i", "`"$installerPath`"", "/quiet", "/norestart" -Wait
           Remove-Item $installerPath -Force
-          
-          # Connect
-          & "$env:ProgramFiles\Tailscale\tailscale.exe" up --authkey=${{ secrets.TAILSCALE_AUTH_KEY }} --hostname="OBS-Stream-$env:GITHUB_RUN_ID" --accept-routes
-          
-          # Get IP
+
+      - name: Establish Tailscale Connection
+        run: |
+          & "$env:ProgramFiles\Tailscale\tailscale.exe" up --authkey=${{ secrets.TAILSCALE_AUTH_KEY }} --hostname="OBS-RDP-$env:GITHUB_RUN_ID"
           $tsIP = $null
           $retries = 0
           while (-not $tsIP -and $retries -lt 20) {
               $tsIP = & "$env:ProgramFiles\Tailscale\tailscale.exe" ip -4
-              Start-Sleep -Seconds 3
+              Start-Sleep -Seconds 5
               $retries++
           }
-          
-          if (-not $tsIP) { 
-            Write-Error "Failed to get Tailscale IP" 
-            exit 1 
+          if (-not $tsIP) {
+              Write-Error "Tailscale IP not assigned. Exiting."
+              exit 1
           }
-          
           echo "TAILSCALE_IP=$tsIP" >> $env:GITHUB_ENV
 
-      - name: 🟢 SUCCESS - Credentials
+      # ---------------------------------------------------
+      # STEP 5: SUCCESS OUTPUT
+      # ---------------------------------------------------
+      - name: 🟢 CONNECTION DETAILS
         run: |
-          Write-Host " "
-          Write-Host "=============================================" -ForegroundColor Green
-          Write-Host "   STREAMING RDP IS READY TO CONNECT" -ForegroundColor Green
-          Write-Host "=============================================" -ForegroundColor Green
-          Write-Host "   IP Address:  $env:TAILSCALE_IP" -ForegroundColor Cyan
-          Write-Host "   Username:    $env:GEN_USER" -ForegroundColor Yellow
-          Write-Host "   Password:    $env:GEN_PASS" -ForegroundColor Yellow
-          Write-Host "============================================="
-          Write-Host "   Copy these credentials to connect!"
+          Write-Host "`n===============================================" -ForegroundColor Green
+          Write-Host "   ULTRAL OBS RDP IS READY" -ForegroundColor Green
+          Write-Host "===============================================" -ForegroundColor Green
+          Write-Host "   IP Address: $env:TAILSCALE_IP" -ForegroundColor Cyan
+          Write-Host "   Username:   $env:GEN_USER" -ForegroundColor Yellow
+          Write-Host "   Password:   $env:GEN_PASS" -ForegroundColor Yellow
+          Write-Host "==============================================="
+          Write-Host "   Apps Installed: OBS Studio, Chrome, VB-Cable"
+          Write-Host "===============================================`n"
           
-          # Loop forever to keep instance alive
           while ($true) {
-            Start-Sleep -Seconds 60
+              Start-Sleep -Seconds 300
           }
